[package]
name = "api"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


#[lib]

[dependencies]
divt = { path="tide", optional=true}
#divt = { path="../api/tide/", features="gql", optional=true}
divg = { path="gotham", optional=true}
divx = { path="actix" , optional=true}
#divx = { path="../api/actix/" , features="gql", optional=true}
divw = { path="warp" , optional=true}
#divw = { path="../api/warp/" , features="gql", optional=true}
divh = { path="hyper" , optional=true}
div-derive = { path="../common/div-derive/" , optional=true}
async-std = { version="*", features=["attributes"], optional=true}
tokio = { version = "0.2", features = ["full"] , optional=true}

[features]
tide=["async-std", "divt"]
tide-gql=["async-std", "divt/gql"]
warp=["tokio", "divw"]
warp-gql=["tokio", "divw/gql"]
actix=["tokio", "divx"]
actix-gql=["tokio", "divx/gql"]
hyper=["tokio", "divh"]
gotham=["tokio", "divg"]
derive=["div-derive"]
