[package]
name = "app"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"
#build = "src/build.rs"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api={ path="../api/", optional=true }
divt = { path="../api/tide/", package="divt", optional=true}
#divt = { path="../api/tide/", features="graphql", optional=true}
divg = { path="../api/gotham/", optional=true}
divx = { path="../api/actix/" , optional=true}
#divx = { path="../api/actix/" , features="graphql", optional=true}
divw = { path="../api/warp/" , optional=true}
#divw = { path="../api/warp/" , features="graphql", optional=true}
divh = { path="../api/hyper/" , optional=true}
div-derive = { path="../common/div-derive/" , optional=true}
common = { path="../common/" ,optional=false}
async-std = { version="*", features=["attributes"], optional=true}
tokio = { version="*", features=["full"], optional=true }

[features]
default=[]
#tide=["async-std", "divt"]
tide=["async-std", "divt"]
tide-gql=["async-std", "divt/gql"]
warp=["tokio", "divw"]
warp-gql=["tokio", "divw/gql"]
actix=["tokio", "divx"]
actix-gql=["tokio", "divx/gql"]
hyper=["tokio", "divh"]
gotham=["tokio", "divg"]
derive=["div-derive"]


#[dev-dependencies]
#fake="*"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[[bin]]
name="main"
path="./src/main.rs"
required-features=["tide"]

[[bin]]
name="tide"
path="./src/bin/tide.rs"
required-features=["tide"]

[[bin]]
name="tide-g"
path="./src/bin/tide.rs"
required-features=["tide/gql"]

[[bin]]
name="act"
path="./src/bin/actix.rs"
required-features=["actix"]

[[bin]]
name="warp"
path="./src/bin/warp.rs"
required-features=["warp"]

[[bin]]
name="goth"
path="./src/bin/goth.rs"
required-features=["gotham"]

[[bin]]
name="hyper"
path="./src/bin/hyper.rs"
required-features=["hyper"]

[alias]
divt=["run --bin tide --features tide"]
dt=["run", "--bin", "tide", "--features", "tide"]
dvt="run --bin tide --features tide"
r="run --bin tide --features tide"
