[package]
name = "db"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common={path="../common/"}
dotenv="*"
sqlx={version="*", features=["json", "uuid", "chrono", "postgres"]}
async-std = { version = "1.6.0", features = ["attributes"] }
#tokio
serde = { version = "*", features = ["derive"] }
serde_json = "*"
chrono = { version = "*", features = ["serde"] }
uuid = { version = "*", features = ["serde", "v4"] }
# dasp
# radio?
# deepspeech?

[dev-dependencies]
fake="*"
log="*"
