[package]
name = "learner"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rustling-ontology? -- for parsing grammar to determine intention of notes
#rust-bert? -- for sentiment analysis, entity recognition, etc.
