[package]
name = "divt"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common={path="../common/"}
db={path="../db/"}
dotenv="*"
#tokio
tide="*"
async-std = { version = "1.6.0", features = ["attributes"] }
argonautica="*"
uuid = { version = "*", features = ["serde", "v4"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
dasp = "*"
