[package]
name = "warp"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp="*"
tokio={version="*", features=["macros"]}
serde={version="*", features=["derive"]}
serde_json="*"
#oauth2 = { version = "3.0", features = ["futures-03"], default-features = false }
#futures = "0.3"
chrono = {version="*", features=["serde"]}
