[package]
name = "divx"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] , optional=false}
common={path="../../common/", optional=false}
db={path="../../db/", optional=false}
actix-web={version="*", optional=false}
actix-rt={version="*", optional=false}
serde = {version = "*", features = ["derive"], optional=false}
serde_json = {version="*", optional=false}
async-graphql={version="*", optional=true}
async-graphql-actix-web={version="*", optional=true}

[features]
default=[]
gql=["async-graphql", "async-graphql-actix-web"]

