[package]
name = "divw"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common={path="../../common/", optional=false}
db={path="../../db/", optional=false}
warp={version="*", optional=false}
tokio = { version = "0.2", features = ["full"] , optional=false}
serde={version="*", features=["derive"], optional=false}
serde_json={version="*", optional=false}
#oauth2 = { version = "3.0", features = ["futures-03"], default-features = false }
#futures = "0.3"
chrono = {version="*", features=["serde"], optional=false}
async-graphql-warp= {version="*", optional=true}
async-graphql= {version="*", optional=true}

[features]
default=[]
gql=["async-graphql", "async-graphql-warp"]
